--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="purple_200">#2a387d</color>
+    <color name="purple_500">#2a387d</color>
+    <color name="purple_700">#2a387d</color>
+    <color name="teal_200">#2a387d</color>
+    <color name="teal_700">#2a387d</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="red">#e52e3e</color>
+    <color name="green">#009a0f</color>
+    <color name="blue">#2a387d</color>
+    <color name="graytext">#cfaaaaaa</color>
+    <color name="lightblue_border">#4d2a387d</color>
+    <color name="gray_btn_bg">#cccccc</color>
+
 </resources>
