--- a/app/src/main/res/drawable/ed_bg.xml
+++ b/app/src/main/res/drawable/ed_bg.xml
@@ -1,9 +1,9 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="960dp"
-    android:height="142dp"
-    android:viewportWidth="960"
-    android:viewportHeight="142">
-  <path
-      android:pathData="M71,0L889,0A71,71 0,0 1,960 71L960,71A71,71 0,0 1,889 142L71,142A71,71 0,0 1,0 71L0,71A71,71 0,0 1,71 0z"
-      android:fillColor="#ccc"/>
-</vector>
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+  <solid android:color="#0d000000" />
+  <stroke
+      android:width="0.3dp"
+      android:color="#756bba" />
+  <corners android:radius="@dimen/_10sdp"/>
+</shape>
