--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -1,9 +1,139 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/white"
     android:layout_height="match_parent"
     tools:context=".UI.login.ForgetPasswordActivity">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <RelativeLayout
+            android:id="@+id/tool_main"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_45sdp"
+            android:background="@color/blue"
+            android:orientation="vertical">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <RelativeLayout
+                android:layout_marginStart="@dimen/_20sdp"
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true">
+                <ImageView
+                    android:id="@+id/back_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_baseline_arrow_back_24"/>
+
+                <TextView
+                    android:layout_marginStart="@dimen/_10sdp"
+                    android:layout_toEndOf="@+id/back_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:fontFamily="sans-serif-medium"
+                    android:lineSpacingExtra="3.3sp"
+                    android:text="Password"
+                    android:textAllCaps="true"
+                    android:textColor="#ffffff"
+                    android:textSize="17.3sp"
+                    android:textStyle="normal" />
+
+            </RelativeLayout>
+
+
+        </RelativeLayout>
+
+        <TextView
+            android:layout_marginTop="@dimen/_30sdp"
+android:layout_marginHorizontal="@dimen/_20sdp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif"
+            android:textStyle="normal"
+            android:textSize="14.7sp"
+            android:textColor="#2a387d"
+            android:lineSpacingExtra="3sp"
+            android:gravity="center_horizontal"
+            tools:text="Forget your Password?"/>
+<TextView
+    android:layout_marginBottom="@dimen/_40sdp"
+android:layout_marginHorizontal="@dimen/_20sdp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif"
+            android:textStyle="normal"
+            android:textSize="14.7sp"
+            android:textColor="#2a387d"
+            android:lineSpacingExtra="3sp"
+            android:gravity="center_horizontal"
+            tools:text="We‘ll Email you a link to reset your password."/>
+
+        <LinearLayout
+            android:layout_marginHorizontal="@dimen/_20sdp"
+            android:gravity="center_vertical"
+            android:background="@drawable/ed_bg"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_45sdp">
+            <ImageView
+                android:layout_marginHorizontal="@dimen/_20sdp"
+                android:layout_width="@dimen/_20sdp"
+                android:layout_height="@dimen/_20sdp"
+                android:src="@drawable/email_ic"/>
+            <EditText
+                android:textColorHint="@color/hint_color"
+                android:hint="Email"
+                android:textSize="@dimen/_14sdp"
+                android:textColor="@color/blue"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_marginTop="@dimen/_20sdp"
+            android:layout_marginHorizontal="@dimen/_20sdp"
+            android:gravity="center_vertical"
+            android:background="@drawable/ed_bg"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_45sdp">
+            <ImageView
+                android:layout_marginHorizontal="@dimen/_10sdp"
+                android:layout_width="@dimen/_20sdp"
+                android:layout_height="@dimen/_20sdp"
+                android:src="@drawable/alert_ic"/>
+            <EditText
+                android:textColorHint="#4f5eab"
+                android:hint="You will be logged out from all your devices"
+                android:textColor="@color/blue"
+                android:textSize="@dimen/_11sdp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"/>
+        </LinearLayout>
+
+
+
+
+
+            <TextView
+                android:id="@+id/back_logins"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginHorizontal="@dimen/_20sdp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif"
+                android:textStyle="normal"
+                android:textSize="14.7sp"
+                android:textColor="#4f5eab"
+                android:lineSpacingExtra="3sp"
+                tools:text="Back to Log in"/>
+
+
+    </LinearLayout>
+</RelativeLayout>
