--- a/app/src/main/res/drawable/btn_bg_gredient.xml
+++ b/app/src/main/res/drawable/btn_bg_gredient.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
 
     android:shape="rectangle">
-
+<corners android:radius="@dimen/_10sdp"/>
     <gradient
 
         android:type="linear"
